--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,7 @@
     tools:context="com.ahmedtikiwa.sunshine.app.MainActivity">
 
     <fragment
-        android:name="com.ahmedtikiwa.sunshine.app.MainActivity$PlaceHolderFragment"
+        android:name="com.ahmedtikiwa.sunshine.app.ForecastFragment"
         android:id="@+id/fragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
