--- a/app/src/main/res/layout/list_item_forecast_today.xml
+++ b/app/src/main/res/layout/list_item_forecast_today.xml
@@ -4,6 +4,7 @@
     android:layout_height="match_parent"
     android:gravity="center_vertical"
     android:minHeight="?attr/listPreferredItemHeight"
+    android:background="@drawable/touch_selector"
     android:orientation="horizontal"
     android:padding="16dp">
 
