added forecast list selectors

--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -8,6 +8,7 @@
     android:paddingTop="16dp">
 
     <ListView
+        style="@style/ForecastListStyle"
         android:id="@+id/list_view_forecast"
         android:layout_width="match_parent"
         android:layout_height="match_parent" />
