--- a/app/src/main/res/drawable-v21/touch_selector.xml
+++ b/app/src/main/res/drawable-v21/touch_selector.xml
@@ -7,10 +7,12 @@
         <ripple android:color="@color/grey" />
     </item>
 
-    <!-- When the view is "activated".  In SINGLE_CHOICE_MODE, it flags the active row
-         of a ListView -->
     <item android:drawable="@color/sunshine_light_blue" android:state_activated="true" />
 
-    <!-- Default, "just hangin' out" state. -->
-    <item android:drawable="@android:color/transparent" />
+    <item android:drawable="@color/sunshine_light_blue" android:state_selected="true" />
+
+    <!-- When the view is "activated".  In SINGLE_CHOICE_MODE, it flags the active row
+         of a ListView -->
+    <item android:drawable="@color/sunshine_blue" android:state_activated="true" />
+
 </selector>
