--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -8,6 +8,18 @@
         style="@style/ForecastListStyle"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+
         android:divider="@null" />
+
+    <TextView
+        android:id="@+id/list_view_forecast_empty"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:gravity="center_horizontal"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:text="@string/empty_state_forecast_list" />
 
 </FrameLayout>
