--- a/app/src/main/res/layout/list_item_forecast_today.xml
+++ b/app/src/main/res/layout/list_item_forecast_today.xml
@@ -14,6 +14,7 @@
         android:layout_gravity="center_horizontal"
         android:layout_marginBottom="16dp"
         android:layout_marginLeft="60dp"
+        android:layout_marginStart="60dp"
         android:layout_marginTop="16dp"
         android:layout_weight="7"
         android:gravity="center_horizontal"
@@ -40,6 +41,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginLeft="8dp"
+            android:layout_marginStart="8dp"
             android:textColor="@color/white"
             android:textSize="36sp" />
     </LinearLayout>
