--- a/app/src/main/res/drawable-v21/touch_selector.xml
+++ b/app/src/main/res/drawable-v21/touch_selector.xml
@@ -13,6 +13,6 @@
 
     <!-- When the view is "activated".  In SINGLE_CHOICE_MODE, it flags the active row
          of a ListView -->
-    <item android:drawable="@color/sunshine_blue" android:state_activated="true" />
+    <item android:drawable="@color/primary" android:state_activated="true" />
 
 </selector>
