--- a/app/src/main/res/drawable/today_touch_selector.xml
+++ b/app/src/main/res/drawable/today_touch_selector.xml
@@ -7,6 +7,6 @@
 
     <item android:state_selected="true" android:drawable="@color/sunshine_light_blue" />
 
-    <item android:drawable="@color/sunshine_blue" />
+    <item android:drawable="@color/primary" />
 
 </selector>
