--- a/app/src/main/res/drawable-v21/touch_selector.xml
+++ b/app/src/main/res/drawable-v21/touch_selector.xml
@@ -1,18 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
+    <item android:state_activated="true"
+        android:drawable="@color/activated"/>
 
-    <!-- State when a row is being pressed, but hasn't yet been activated (finger down) -->
-    <item android:state_pressed="true">
-        <ripple android:color="@color/grey" />
-    </item>
-
-    <item android:drawable="@color/sunshine_light_blue" android:state_activated="true" />
-
-    <item android:drawable="@color/sunshine_light_blue" android:state_selected="true" />
-
-    <!-- When the view is "activated".  In SINGLE_CHOICE_MODE, it flags the active row
-         of a ListView -->
-    <item android:drawable="@color/primary" android:state_activated="true" />
-
+    <!-- Default, "just hangin' out" state. The base state also
+         implements the ripple effect. -->
+    <item android:drawable="@drawable/touch_selector_base" />
 </selector>
