--- a/app/src/main/res/layout/fragment_main.xml
+++ b/app/src/main/res/layout/fragment_main.xml
@@ -7,8 +7,7 @@
         android:id="@+id/list_view_forecast"
         style="@style/ForecastListStyle"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-
+        android:layout_height="wrap_content"
         android:divider="@null" />
 
     <TextView
@@ -22,6 +21,6 @@
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingStart="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin"
-        android:text="@string/empty_state_forecast_list" />
+        android:text="@string/empty_forecast_list" />
 
 </FrameLayout>
