--- a/app/src/main/res/menu/detail_fragment.xml
+++ b/app/src/main/res/menu/detail_fragment.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/action_share"
-        android:title="@string/share"
+        android:title="@string/action_share"
         app:actionProviderClass="android.support.v7.widget.ShareActionProvider"
         app:showAsAction="always" />
 </menu>
