--- a/app/src/main/res/menu/forecast_fragment.xml
+++ b/app/src/main/res/menu/forecast_fragment.xml
@@ -3,6 +3,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/action_display_map"
-        android:title="@string/preferred_location_map"
+        android:title="@string/action_map"
         app:showAsAction="never" />
 </menu>
