--- a/app/src/main/res/layout-sw600dp/fragment_main.xml
+++ b/app/src/main/res/layout-sw600dp/fragment_main.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     tools:context="com.ahmedtikiwa.sunshine.app.ForecastFragment">
 
-    <ListView
+    <android.support.v7.widget.RecyclerView
         android:id="@+id/list_view_forecast"
         style="@style/ForecastListStyle"
         android:layout_width="match_parent"
